force-app/main/default/objects/cgcloud__POS__c/cgcloud__POS__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the POS object. A point of sale (POS) stores information of a place in customer&apos;s premises where goods are sold to consumers.</description>
    <label>POS</label>
    <nameField>
        <displayFormat>POS-{0000000}</displayFormat>
        <label>POS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>