force-app/main/default/objects/cgcloud__POS__c/fields/cgcloud__POS_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to POS template.</description>
    <label>POS Template</label>
    <referenceTo>cgcloud__POS_Template__c</referenceTo>
    <relationshipLabel>POS</relationshipLabel>
    <relationshipName>POS</relationshipName>
    <type>Lookup</type>
</CustomField>