force-app/main/default/objects/cgcloud__POS__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2999,12,31)</defaultValue>
    <description>Valid thru date of the POS.</description>
    <label>Valid Thru</label>
    <required>true</required>
    <type>Date</type>
</CustomField>