force-app/main/default/objects/cgcloud__POS__c/validationRules/cgcloud__Avoid_Customer_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Customer_Modification</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__Account__c)</errorConditionFormula>
    <errorMessage>The Customer can&apos;t be edited after POS creation.</errorMessage>
</ValidationRule>