force-app/main/default/objects/cgcloud__POS__c/validationRules/cgcloud__Avoid_Template_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Template_Modification</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__POS_Template__c)</errorConditionFormula>
    <errorMessage>The POS Template can&apos;t be edited after POS creation.</errorMessage>
</ValidationRule>