force-app/main/default/objects/cgcloud__POS__c/validationRules/cgcloud__FutureValidThru.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__FutureValidThru</fullName>
    <active>true</active>
    <errorConditionFormula>OR(OR(ISNULL( cgcloud__Valid_From__c ),ISNULL( cgcloud__Valid_Thru__c )),cgcloud__Valid_Thru__c&lt;cgcloud__Valid_From__c)</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>